packages/kubernetes/templates/valuya-authz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valuya-authz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: valuya-authz
  template:
    metadata:
      labels:
        app: valuya-authz
    spec:
      containers:
        - name: authz
          image: ghcr.io/valuya/guard-adapter:latest
