packages/kubernetes/templates/valuya-authz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valuya-authz
spec:
  selector:
    app: valuya-authz
  ports:
    - port: 8080
      targetPort: 8080
